<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ok">"OK"</string>
    <string name="cancel">"Cancel"</string>
    <string name="set">"Set"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="the_external_memory_storage_is_not_mounted">"External memory storage is not mounted. You may have to disable USB memory storage."</string>
    <string name="recording_duration_is_limited_to_15_seconds">"Recording duration is limited to 15 seconds"</string>
    <string name="an_error_occurs_while_recording">"Error occurred while recording"</string>
    <string name="cross_dj_saturated_storage_not_enough_free_space_to_record_your_mix">"Not enough space to record your mix."</string>
    <string name="cross_dj_saturated_storage_your_recording_might_stop_soon_because_no_more_free_space_is_available">"Your recording might stop soon, because there is no more space available."</string>
    <string name="recording_soon_to_reach_max_duration">"Recording will soon reach its maximum duration. Check your preferences."</string>
    <string name="recording_reached_max_duration">"Recording has reached its maximum duration. Check your preferences."</string>
    <string name="record_is_not_available_in_external_mixer_mode">"Record isn\'t available in External Mixer mode"</string>
    <string name="no_error">"No error"</string>
    <string name="file_too_big_to_be_loaded_into_memory">"File is too big to be loaded into memory."</string>
    <string name="the_remote_track_is_too_long_exceed_the_20_minutes_limit">"The remote track is too long (exceeds 20 minute limit)"</string>
    <string name="there_s_not_enough_space_in_your_internal_storage_try_to_do_some_clean_up">"There\'s not enough space in your internal storage (try to free up some space)"</string>
    <string name="the_format_is_unknown">"The format is unknown"</string>
    <string name="the_file_is_invalid">"The file is invalid"</string>
    <string name="file_not_found">"File not found"</string>
    <string name="check_your_audio_settings">"Check your audio settings"</string>
    <string name="unspecified_error">"Unspecified error"</string>
    <string name="track_error">"Track error"</string>
    <string name="invalid_track">"Invalid track"</string>
    <string name="the_format_is_not_supported_on_android">"The format isn\'t supported on Android"</string>
    <string name="the_permission_of_storage">"Please grant permission of reading storage firstly to play musics successfully"</string>
    <string name="can_not_play_in_dj_mode">"Can’t play this file in DJ mode"</string>
    <string name="mix_your_music">"Mix your music!"</string>
    <string name="cannot_specify_an_empty_name_for_playlist">"Playlist name can\'t be empty"</string>
    <string name="playlist_name_already_exists_">"Playlist name already exists"</string>
    <string name="there_was_an_issue_during_playlist_creation">"An issue occurred during playlist creation"</string>
    <string name="auth_no_username_password">"Fill in username and password to log in."</string>
    <string name="auth_wrong_username_password">"Wrong username or password"</string>
    <string name="auth_problem_during_authentification">"An issue occurred during authentication"</string>
    <string name="never_show_it_again">"Don\'t show it again"</string>
    <string name="dialogtitle_rdio_not_unlimited">"Get a premium account"</string>
    <string name="dialogtitle_rdio_anonymous">"Get a premium account"</string>
    <string name="dialogtitle_rdio_get_premium">"Get a premium account"</string>
    <string name="rdio_anonymous_usage_description">"You can only listen to 30 second previews as a free user. Subscribe to listen to the full song."</string>
    <string name="log_in">"Log in"</string>
    <string name="sign_up">"Sign up"</string>
    <string name="dialog_wifi_only_stream_title">"Wi-Fi is disabled"</string>
    <string name="dialog_wifi_only_stream_message">"Can\'t play RADIO tracks when Wi-Fi is disabled. Turn "Stream via Wi-Fi only" off to change this setting."</string>
    <string name="no_transition_mode">"No mix"</string>
    <string name="manual_transition_mode">"Manual mix"</string>
    <string name="auto_transition_mode">"Auto mix"</string>
    <string name="crossfader_transition_mode">"Crossfade"</string>
    <string name="the_track_cannot_be_played">"The track can\'t be played"</string>
    <string name="scratching_is_disabled_in_no_mix_mode">"You can only scratch while in DJ mode."</string>
    <string name="usb_connection_failure">"USB connection failed"</string>
    <string name="no_device_detected">"No device detected"</string>
    <string name="connection_to_device_succeed">"Connected to %s successfully"</string>
    <string name="usb_device">"USB device"</string>
    <string name="the_connected_device_is_unknown">"The connected device is unknown. (By now, only Mixvibes U-Mix and Pioneer DDJ-SB or WeGo2 are supported)."</string>
    <string name="invalid_drm_file">"File has no valid DRM authority."</string>
    <string name="drm_file_is_not_allowed">"DRM file isn\'t allowed to play in mix mode"</string>
    <string name="unable_to_load_track">"Unable to load %s"</string>
    <string name="record_default_name">"Record_"</string>
    <string name="dj_mode_title">"Mode: %s"</string>
    <string name="extraCharge_warning_title">"Use mobile data?"</string>
    <string name="extracharge_warning_msg">"Deezer will use mobile data for online streaming. Extra charges may occur. Turn on \'Stream via Wi-Fi only\' in Settings if you don\'t want Deezer to use mobile data."</string>
    <string name="extracharge_use_mobileData_btn">"Use mobile data"</string>
    <string name="subsrcibe_title">"Subscribe"</string>
    <string name="subsrcibe_before_end_msg">"Premium + free trial will end in 24 hours. Subscribe to enjoy full music experience in Deezer?"</string>
    <string name="subsrcibe_end_msg">"Premium + free trial is end. Subscribe to enjoy full music experience in Deezer?"</string>
    <string name="subsrcibe_for_radio_msg">"You can only skip 5 songs in a row as a free user. Subscribe to skip as many songs as you want."</string>
    <string name="subscribe_later_btn">"Later"</string>
    <string name="settings_stream_via_wifi_only_win">"To play Deezer tracks using mobile data, turn off \'Stream via Wi-Fi only\' in the settings."</string>
    <string name="mobiledata_turnoff_btn">"Disable"</string>
    <string name="decode_not_finish">"You’re in the Auto mix DJ mode. Wait for a moment for songs to load."</string>
    <string name="have_not_load_finish">"“Loading music, please wait...”"</string>
    <string name="record_minutes">"%d minutes"</string>
    <string name="record_minute">"%d minute"</string>
    <string name="song_file_not_found">"“Files do not exist”"</string>
    <string name="scenes_shuffle">"Shuffle all"</string>
    <string name="my_favourite_songs">"My Favourite Songs"</string>
    <string name="detail_manager">"Manager"</string>
    <string name="detail_add">"Add"</string>
    <string name="detail_edit">"Edit"</string>
    <string name="detail_detele">"Detele"</string>
    <string name="detail_download">"Download"</string>
    <string name="app_name">"Music"</string>
    <string name="recoverscan">"Recover"</string>
    <string name="all_recover_scan">"Recover all"</string>
    <string name="ignored">"Ignored"</string>
    <string name="ignore">"Ignore"</string>
    <string name="dialogmessage_all_recover_scan">"Recover scan all?"</string>
    <string name="dialogtitle_ignore_scan">"Recover scan"</string>
    <string name="dialogmessage_ignore_scan">"Ignore the folder ?"</string>
    <string name="ignored_empty">"No ignored folders, you can swipe left the folder list to ignore"</string>
    <string name="no_content">"No content"</string>
    <string name="add_to_my_playlist">"Add to my playlist"</string>
    <string name="my_favourite_music">"My Favourite"</string>
    <string name="username">"User Name"</string>
    <string name="shrimp_account">"Shrimp Account"</string>
    <string name="shrimp_account_subtitle">"Bind shrimp account to enjoy more online"</string>
    <string name="network_setting">"2G/3G/4G network setting"</string>
    <string name="timed_close">"Timed Close"</string>
    <string name="listen_and_download_quality">"Listen And Download Quality"</string>
    <string name="dummy_button">"Hide button"</string>
    <string name="dummy_content">"Hidden content"</string>
    <string name="navigation_drawer_open">"“Open Drawer Navigation”"</string>
    <string name="navigation_drawer_close">"“Close Drawer Navigation”"</string>
    <string name="all_songs">"All songs"</string>
    <string name="albums">"Albums"</string>
    <string name="artists">"Artists"</string>
    <string name="playlists">"playlists"</string>
    <string name="playlist">"Playlists"</string>
    <string name="scenes">"Scenes"</string>
    <string name="folders">"Folders"</string>
    <string name="loading_">"Loading…"</string>
    <string name="genres">"Genres"</string>
    <string name="artwork">"Artwork"</string>
    <string name="menu">"Menu"</string>
    <string name="remove">"Remove"</string>
    <string name="use_as_ringtone">"Use as ringtone"</string>
    <string name="go_to_artist">"Go to artist"</string>
    <string name="go_to_album">"Go to album"</string>
    <string name="add_to_queue">"Add to queue"</string>
    <string name="add_to_playlist">"Add to playlist"</string>
    <string name="please_input_song_name">"Song name can\'t be empty"</string>
    <string name="last_added">"Last added"</string>
    <string name="songs">"Songs"</string>
    <plurals name="number_of_songs">
        <item quantity="one">"%d song"</item>
        <item quantity="other">"%d songs"</item>
    </plurals>
    <plurals name="number_of_songs_2">
        <item quantity="one">"(%d song)"</item>
        <item quantity="other">"(%d songs)"</item>
    </plurals>
    <string name="all">"All"</string>
    <string name="online">"Online music"</string>
    <string name="local">"Local music"</string>
    <string name="queue">"Queue"</string>
    <string name="settings">"Settings"</string>
    <string name="favorite_playlist">"Collect"</string>
    <string name="hide_from_library">"Hide"</string>
    <string name="unhide">"Unhide"</string>
    <string name="remove_from_queue">"Remove form queue"</string>
    <string name="account">"Account"</string>
    <string name="welcome_to_onetouch_mix">"Music"</string>
    <string name="delete">"Delete"</string>
    <string name="play_next">"Play next"</string>
    <string name="add_to_play_queue">"Add to play queue"</string>
    <string name="exit">"Exit"</string>
    <string name="start_music">"Start music service"</string>
    <string name="service_declaration_desc">"Welcome to use TCL music services. Using mobile network will be charged. Consult your local network operator for details. Meanwhile, for better services to mobile phone users, some information (such as your device ID, location information, etc.) will be collected. We will keep confidential to the user\'s mobile phone information fully, and guarantee not disclosed or illegally fetching by a third party. Agree to the above and then start music service."</string>
    <string name="permission_tips1">"Open the USB memory permissions to ensure the normal use basic functions."</string>
    <string name="permission_tips2">"Permission to open the phone will help you to better enjoy the fun Music. The user\'s privacy is safe."</string>
    <string name="select_all">"Check all"</string>
    <string name="batch_add_to_playlist">"Add to"</string>
    <string name="batch_songs_num">"Choose %d songs"</string>
    <string name="share">"Share"</string>
    <string name="waiting_load">"Loading"</string>
    <string name="check_to_remove">"Remove these songs?"</string>
    <string name="keep_files">"Keep local files"</string>
</resources>