<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/action_play_next"
        android:showAsAction="withText|ifRoom"
        android:title="@string/play_next"/>

    <item
        android:id="@id/action_add_to_playlist"
        android:showAsAction="withText|ifRoom"
        android:title="@string/add_to_playlist"/>
    <item
        android:id="@id/action_go_to_album"
        android:showAsAction="withText|ifRoom"
        android:title="@string/go_to_album"/>
    <item
        android:id="@id/action_go_to_artist"
        android:showAsAction="withText|ifRoom"
        android:title="@string/go_to_artist"/>
    <item
        android:id="@id/action_remove_from_playlists"
        android:showAsAction="withText|ifRoom"
        android:title="@string/remove_from_queue"/>
</menu>
