<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/remove_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:alpha="0.86"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/remove_songs_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_to_remove"
        android:alpha="0.86"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@+id/remove_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"/>

    <CheckBox
        android:id="@+id/selected_to_delete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/remove_songs_msg"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:button="@null"
        android:background="@drawable/bg_checkbox"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_files"
        android:textSize="15sp"
        android:layout_toRightOf="@id/selected_to_delete"
        android:layout_alignBottom="@id/selected_to_delete"
        android:textColor="#000000"
        android:alpha="0.40"
        android:layout_marginStart="25dp"/>


</RelativeLayout>
