<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/prompt_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/show_titile"
        android:layout_marginLeft="40dp"
        android:background="@drawable/picto_prompt"/>

    <TextView
        android:id="@+id/show_titile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="12dp"
        android:text="@string/permission_tips1"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/show_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_titile"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:text="@string/permission_tips2"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/imageContanier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_panel"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="95dp"
        android:layout_marginStart="95dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/picto_phone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6A7B83"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/white_87"
            android:textSize="20sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black_20"/>

        <TextView
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6A7B83"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#ffc000"
            android:textSize="20sp"/>
    </LinearLayout>

</RelativeLayout>