<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/music_theme_color">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:src="@drawable/start_music_application"/>

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_to_onetouch_mix"
        android:textAlignment="gravity"
        android:textColor="@color/base_title_unselect_color"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/start_music_view"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/service_declaration"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/start_button_bg"
        android:text="@string/start_music"
        android:textColor="@color/music_theme_color"/>

    <TextView
        android:id="@+id/service_declaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="left"
        android:singleLine="false"
        android:text="@string/service_declaration_desc"
        android:textColor="@color/base_title_unselect_color"
        android:textSize="15dp"/>

</RelativeLayout>